added html structure for apple page

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -94,7 +94,152 @@
     <!--  -->
     <div class="top-100">
       <div class="container">
-        <p>This is where you implement your code</p>
+        <!--hero-section-->
+      <section class="hero-section">
+        <div class="inch">16-inch model</div>
+        <div class="MacBook">MacBook Pro</div>
+        <div class="brightest">The best for the brightest.</div>
+        <div class="more-and-buy-links">
+          <ul>
+            <li><a href="#">Learn more ></a></li>
+            <li><a href="#">Buy ></a></li>
+          </ul>
+        </div>
+        <div class="MacBook-img">
+          <img src="images/home/macbook-pro.jpg" alt="macbook-pro" />
+        </div>
+      </section>
+
+      <!--iphone 11 pro section-->
+      <section class="iphone-11-pro-container heigt-and-center">
+        <div class="iphone-11-pro">iPhone 11 Pro</div>
+        <div class="pro-texts">Pro cameras. Pro display. Pro performance.</div>
+        <div class="iphone-11-pro-currencies">
+          From $24.95/mo. or $599 with trade‑in.
+        </div>
+        <div class="more-and-buy-links">
+          <ul>
+            <li><a href="#">Learn more ></a></li>
+            <li><a href="#">Buy ></a></li>
+          </ul>
+        </div>
+      </section>
+
+      <!--iphone 11 section-->
+      <section class="iphone-11-container heigt-and-center">
+        <div class="iphone-11">iPhone 11</div>
+        <div class="right-amount-txt">Just the right amount of everything.</div>
+        <div class="iphone-11-currencies">
+          From $16.62/mo. or $399 with trade‑in.
+        </div>
+        <div class="more-and-buy-links">
+          <ul>
+            <li><a href="#">Learn more ></a></li>
+            <li><a href="#">Buy></a></li>
+          </ul>
+        </div>
+      </section>
+
+      <!--watch and card section-->
+      <section class="watch-and-card-section ">
+        <!--watch section-->
+        <div class="watch-section heigt-and-center">
+          <div class="watch-logo">
+            <img
+              src="images/icons/watch-series5-logo.png"
+              alt="watch-series5-logo"
+            />
+          </div>
+          <div class="retinal-display-text">
+            With the new Always-On Retina display.
+          </div>
+          <div class="never-seen-watch">
+            You’ve never seen a watch like this.
+          </div>
+          <div class="more-and-buy-links">
+            <ul>
+              <li><a href="#">Learn more ></a></li>
+              <li><a href="#">Buy></a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!---card section-->
+        <div class="card-section heigt-and-center">
+          <div class="card-logo">
+            <img src="images/icons/apple-card-logo.png" alt="apple-card-logo" />
+          </div>
+          <div class="daily-cash-txt">
+            Get 3% Daily Cash on purchases from <br />Apple using Apple Card.
+          </div>
+          <div class="more-and-buy-links">
+            <ul>
+              <li><a href="#">Learn more ></a></li>
+              <li><a href="#">Buy></a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!--tv and airpods section-->
+      <section class="tv-and-airpods-section ">
+        <!--tv section-->
+        <div class="tv-section heigt-and-center">
+          <div class="tv-logo">
+            <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo" />
+          </div>
+          <div class="servant-logo">
+            <img src="images/icons/servant-logo.png" alt="servant-logo" />
+          </div>
+          <div class="trailer">
+            <ul>
+              <li><a href="#">Watch the trailer</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!---airpods section-->
+        <div class="airpods-section heigt-and-center">
+          <div class="airpod-title">AirPods Pro</div>
+          <div class="Magic">Magic like you’ve never heard.</div>
+          <div class="more-and-buy-links">
+            <ul>
+              <li><a href="#">Learn more ></a></li>
+              <li><a href="#">Buy></a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!--section for macBook and iPad-->
+      <section class="macBook-and-ipad-section heigt-and-center">
+        <!--macBook section-->
+        <div class="macbook-section">
+          <div class="inch2">16-inch model</div>
+          <div class="MacBook2">MacBook Pro</div>
+          <div class="brightest2">The best for the brightest.</div>
+          <div class="more-and-buy-links">
+            <ul>
+              <li><a href="#">Learn more ></a></li>
+              <li><a href="#">Buy></a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!---iPad section-->
+        <div class="ipad-section heigt-and-center">
+          <div class="ipad-img">
+          <img src="images/icons/new-ipad-logo.png" alt="new-ipad-logo" />
+        </div>
+        <div class="ipad-text">Like a computer. Unlike any computer.</div>
+        <div class="more-and-buy-links">
+          <ul>
+            <li><a href="#">Learn more ></a></li>
+            <li><a href="#">Buy></a></li>
+          </ul>
+        </div>
+      </section>
+        </div>
       </div>
     </div>
 
