added style for  iphone 11 section

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -93,31 +93,31 @@
     <!-- Your code goes in here -->
     <!--  -->
     <div class="top-100">
-      <div class="container">
+      <div class="container-fluid">
         <!--hero-section-->
-      <section class="hero-section">
-        <div class="inch">16-inch model</div>
-        <div class="MacBook">MacBook Pro</div>
-        <div class="brightest">The best for the brightest.</div>
+      <section class="hero-section text-center">
+        <div class="inch fs-4">16-inch model</div>
+        <div class="MacBook fs-1 fw-bold">MacBook Pro</div>
+        <div class="brightest fs-3">The best for the brightest.</div>
         <div class="more-and-buy-links">
           <ul>
             <li><a href="#">Learn more ></a></li>
             <li><a href="#">Buy ></a></li>
           </ul>
         </div>
-        <div class="MacBook-img">
-          <img src="images/home/macbook-pro.jpg" alt="macbook-pro" />
+        <div class="MacBook-img row justify-content-center">
+          <img class="col-sm-5" src="images/home/macbook-pro.jpg" alt="macbook-pro" />
         </div>
       </section>
 
       <!--iphone 11 pro section-->
       <section class="iphone-11-pro-container heigt-and-center">
-        <div class="iphone-11-pro">iPhone 11 Pro</div>
-        <div class="pro-texts">Pro cameras. Pro display. Pro performance.</div>
-        <div class="iphone-11-pro-currencies">
+        <div class="iphone-11-pro fs-1 fw-bold text-white text-center mt-30 pt-60">iPhone 11 Pro</div>
+        <div class="pro-texts text-white text-center fs-3 mt-30">Pro cameras. Pro display. Pro performance.</div>
+        <div class="iphone-11-pro-currencies pro-texts text-gray text-center fs-6">
           From $24.95/mo. or $599 with trade‑in.
         </div>
-        <div class="more-and-buy-links">
+        <div class="more-and-buy-links text-center">
           <ul>
             <li><a href="#">Learn more ></a></li>
             <li><a href="#">Buy ></a></li>
