added style for iphone 11 section

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -113,8 +113,8 @@
       <!--iphone 11 pro section-->
       <section class="iphone-11-pro-container heigt-and-center">
         <div class="iphone-11-pro fs-1 fw-bold text-white text-center mt-30 pt-60">iPhone 11 Pro</div>
-        <div class="pro-texts text-white text-center fs-3 mt-30">Pro cameras. Pro display. Pro performance.</div>
-        <div class="iphone-11-pro-currencies pro-texts text-gray text-center fs-6">
+        <div class="pro-texts text-white text-center fs-2 mt-30">Pro cameras. Pro display. Pro performance.</div>
+        <div class="iphone-11-pro-currencies pro-texts text-secondary-emphasis text-center fs-5">
           From $24.95/mo. or $599 with trade‑in.
         </div>
         <div class="more-and-buy-links text-center">
@@ -127,12 +127,12 @@
 
       <!--iphone 11 section-->
       <section class="iphone-11-container heigt-and-center">
-        <div class="iphone-11">iPhone 11</div>
-        <div class="right-amount-txt">Just the right amount of everything.</div>
-        <div class="iphone-11-currencies">
+        <div class="iphone-11 fs-1 fw-bold text-center mt-30 pt-60">iPhone 11</div>
+        <div class="right-amount-txt text-center fs-3 mt-30">Just the right amount of everything.</div>
+        <div class="iphone-11-currencies ro-texts text-secondary-emphasis text-center fs-5">
           From $16.62/mo. or $399 with trade‑in.
         </div>
-        <div class="more-and-buy-links">
+        <div class="more-and-buy-links text-center">
           <ul>
             <li><a href="#">Learn more ></a></li>
             <li><a href="#">Buy></a></li>
