--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -141,22 +141,22 @@
       </section>
 
       <!--watch and card section-->
-      <section class="watch-and-card-section ">
+      <section class="watch-and-card-section d-flex">
         <!--watch section-->
         <div class="watch-section heigt-and-center">
-          <div class="watch-logo">
+          <div class="watch-logo text-center">
             <img
               src="images/icons/watch-series5-logo.png"
               alt="watch-series5-logo"
             />
           </div>
-          <div class="retinal-display-text">
+          <div class="retinal-display-text text-center">
             With the new Always-On Retina display.
           </div>
-          <div class="never-seen-watch">
+          <div class="never-seen-watch text-center">
             You’ve never seen a watch like this.
           </div>
-          <div class="more-and-buy-links">
+          <div class="more-and-buy-links text-center">
             <ul>
               <li><a href="#">Learn more ></a></li>
               <li><a href="#">Buy></a></li>
@@ -166,13 +166,13 @@
 
         <!---card section-->
         <div class="card-section heigt-and-center">
-          <div class="card-logo">
+          <div class="card-logo text-center">
             <img src="images/icons/apple-card-logo.png" alt="apple-card-logo" />
           </div>
-          <div class="daily-cash-txt">
+          <div class="daily-cash-txt text-center">
             Get 3% Daily Cash on purchases from <br />Apple using Apple Card.
           </div>
-          <div class="more-and-buy-links">
+          <div class="more-and-buy-links text-center">
             <ul>
               <li><a href="#">Learn more ></a></li>
               <li><a href="#">Buy></a></li>
