--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -200,8 +200,8 @@
 
         <!---airpods section-->
         <div class="airpods-section heigt-and-center">
-          <div class="airpod-title">AirPods Pro</div>
-          <div class="Magic">Magic like you’ve never heard.</div>
+          <div class="airpod-title text-white fw-bold">AirPods Pro</div>
+          <div class="Magic text-white">Magic like you’ve never heard.</div>
           <div class="more-and-buy-links">
             <ul>
               <li><a href="#">Learn more ></a></li>
