--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -212,11 +212,11 @@
       </section>
 
       <!--section for macBook and iPad-->
-      <section class="macBook-and-ipad-section heigt-and-center">
+      <section class="macBook-and-ipad-section heigt-and-center text-center d-flex">
         <!--macBook section-->
         <div class="macbook-section">
           <div class="inch2">16-inch model</div>
-          <div class="MacBook2">MacBook Pro</div>
+          <div class="MacBook2 fw-bold">MacBook Pro</div>
           <div class="brightest2">The best for the brightest.</div>
           <div class="more-and-buy-links">
             <ul>
