refined class names for macbook section

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -96,16 +96,16 @@
       <div class="container-fluid">
         <!--hero-section-->
       <section class="hero-section text-center">
-        <div class="inch fs-4">16-inch model</div>
-        <div class="MacBook fs-1 fw-bold">MacBook Pro</div>
-        <div class="brightest fs-3">The best for the brightest.</div>
+        <div class="fs-4">16-inch model</div>
+        <div class="fs-1 fw-bold">MacBook Pro</div>
+        <div class="fs-3">The best for the brightest.</div>
         <div class="more-and-buy-links">
           <ul>
             <li><a href="#">Learn more ></a></li>
             <li><a href="#">Buy ></a></li>
           </ul>
         </div>
-        <div class="MacBook-img row justify-content-center">
+        <div class="row justify-content-center">
           <img class="col-sm-5" src="images/home/macbook-pro.jpg" alt="macbook-pro" />
         </div>
       </section>
