refined class names for iphone 11 pro section

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -111,13 +111,13 @@
       </section>
 
       <!--iphone 11 pro section-->
-      <section class="iphone-11-pro-container heigt-and-center">
-        <div class="iphone-11-pro fs-1 fw-bold text-white text-center mt-30 pt-60">iPhone 11 Pro</div>
-        <div class="pro-texts text-white text-center fs-2 mt-30">Pro cameras. Pro display. Pro performance.</div>
-        <div class="iphone-11-pro-currencies pro-texts text-secondary-emphasis text-center fs-5">
+      <section class="iphone-11-pro-container heigt-and-center text-center">
+        <div class="fs-1 fw-bold text-white">iPhone 11 Pro</div>
+        <div class="text-white fs-2">Pro cameras. Pro display. Pro performance.</div>
+        <div class="text-secondary-emphasis fs-5">
           From $24.95/mo. or $599 with trade‑in.
         </div>
-        <div class="more-and-buy-links text-center">
+        <div class="more-and-buy-links">
           <ul>
             <li><a href="#">Learn more ></a></li>
             <li><a href="#">Buy ></a></li>
