refined class names for iphone 11 section

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -126,13 +126,13 @@
       </section>
 
       <!--iphone 11 section-->
-      <section class="iphone-11-container heigt-and-center">
-        <div class="iphone-11 fs-1 fw-bold text-center mt-30 pt-60">iPhone 11</div>
-        <div class="right-amount-txt text-center fs-3 mt-30">Just the right amount of everything.</div>
-        <div class="iphone-11-currencies ro-texts text-secondary-emphasis text-center fs-5">
+      <section class="iphone-11-container heigt-and-center text-center">
+        <div class="fs-1 fw-bold">iPhone 11</div>
+        <div class="fs-3">Just the right amount of everything.</div>
+        <div class="text-secondary-emphasis fs-5">
           From $16.62/mo. or $399 with trade‑in.
         </div>
-        <div class="more-and-buy-links text-center">
+        <div class="more-and-buy-links">
           <ul>
             <li><a href="#">Learn more ></a></li>
             <li><a href="#">Buy></a></li>
