refined class names for watch and card  section

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -141,7 +141,7 @@
       </section>
 
       <!--watch and card section-->
-      <section class="watch-and-card-section d-flex text-center">
+      <section class="d-flex text-center">
         <!--watch section-->
         <div class="watch-section heigt-and-center">
           <div class="watch-logo">
@@ -150,10 +150,10 @@
               alt="watch-series5-logo"
             />
           </div>
-          <div class="retinal-display-text">
+          <div class="">
             With the new Always-On Retina display.
           </div>
-          <div class="never-seen-watch">
+          <div class="">
             You’ve never seen a watch like this.
           </div>
           <div class="more-and-buy-links">
@@ -169,7 +169,7 @@
           <div class="card-logo">
             <img src="images/icons/apple-card-logo.png" alt="apple-card-logo" />
           </div>
-          <div class="daily-cash-txt">
+          <div class="">
             Get 3% Daily Cash on purchases from <br />Apple using Apple Card.
           </div>
           <div class="more-and-buy-links">
