refined class names for tv and airpods  section

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -182,7 +182,7 @@
       </section>
 
       <!--tv and airpods section-->
-      <section class="tv-and-airpods-section d-flex text-center">
+      <section class="d-flex text-center">
         <!--tv section-->
         <div class="tv-section heigt-and-center">
           <div class="tv-logo">
@@ -200,8 +200,8 @@
 
         <!---airpods section-->
         <div class="airpods-section heigt-and-center">
-          <div class="airpod-title text-white fw-bold">AirPods Pro</div>
-          <div class="Magic text-white">Magic like you’ve never heard.</div>
+          <div class="text-white fw-bold">AirPods Pro</div>
+          <div class="text-white">Magic like you’ve never heard.</div>
           <div class="more-and-buy-links">
             <ul>
               <li><a href="#">Learn more ></a></li>
