refined class names for macbook grid and ipad  section

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -212,12 +212,12 @@
       </section>
 
       <!--section for macBook and iPad-->
-      <section class="macBook-and-ipad-section heigt-and-center text-center d-flex">
+      <section class="text-center d-flex">
         <!--macBook section-->
         <div class="macbook-section">
-          <div class="inch2">16-inch model</div>
-          <div class="MacBook2 fw-bold">MacBook Pro</div>
-          <div class="brightest2">The best for the brightest.</div>
+          <div class="">16-inch model</div>
+          <div class="fw-bold">MacBook Pro</div>
+          <div class="">The best for the brightest.</div>
           <div class="more-and-buy-links">
             <ul>
               <li><a href="#">Learn more ></a></li>
@@ -231,7 +231,7 @@
           <div class="ipad-img">
           <img src="images/icons/new-ipad-logo.png" alt="new-ipad-logo" />
         </div>
-        <div class="ipad-text">Like a computer. Unlike any computer.</div>
+        <div class="">Like a computer. Unlike any computer.</div>
         <div class="more-and-buy-links">
           <ul>
             <li><a href="#">Learn more ></a></li>
