refined the structure to better fit the mobile screen

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -141,7 +141,7 @@
       </section>
 
       <!--watch and card section-->
-      <section class="d-flex text-center">
+      <section class=" watch-and-card d-flex text-center">
         <!--watch section-->
         <div class="watch-section heigt-and-center">
           <div class="watch-logo">
