refined the apple web clone styles

--- a/Phase 1/Week-4/appleProject/Project/index.html
+++ b/Phase 1/Week-4/appleProject/Project/index.html
@@ -333,7 +333,7 @@
             Copyright &copy; 2019 Apple Inc. All rights reserved.
           </div>
           <div class="footer-links-terms">
-            <ul class="footer-list">
+            <ul class="footer-list the-four-lists">
               <li><a href="#">Privacy Policy</a></li>
               <li><a href="#">Terms of Use</a></li>
               <li><a href="#">Sales and Refunds</a></li>
