--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/index.html
@@ -95,7 +95,7 @@
     <div class="top-100">
       <div class="container-fluid">
         <!--hero-section-->
-      <section class="hero-section text-center">
+      <section class="text-center">
         <div class="fs-4">16-inch model</div>
         <div class="fs-1 fw-bold">MacBook Pro</div>
         <div class="fs-3">The best for the brightest.</div>
@@ -105,14 +105,14 @@
             <li><a href="#">Buy ></a></li>
           </ul>
         </div>
-        <div class="row justify-content-center">
-          <img class="col-sm-5" src="images/home/macbook-pro.jpg" alt="macbook-pro" />
+        <div class="justify-content-center">
+          <img class="col-sm-7" src="images/home/macbook-pro.jpg" alt="macbook-pro" />
         </div>
       </section>
 
       <!--iphone 11 pro section-->
-      <section class="iphone-11-pro-container heigt-and-center text-center">
-        <div class="fs-1 fw-bold text-white">iPhone 11 Pro</div>
+      <section class="iphone-11-pro-container text-center">
+        <div class="fs-1 fw-bold pt-30 text-white pt-5">iPhone 11 Pro</div>
         <div class="text-white fs-2">Pro cameras. Pro display. Pro performance.</div>
         <div class="text-secondary-emphasis fs-5">
           From $24.95/mo. or $599 with trade‑in.
@@ -126,10 +126,10 @@
       </section>
 
       <!--iphone 11 section-->
-      <section class="iphone-11-container heigt-and-center text-center">
-        <div class="fs-1 fw-bold">iPhone 11</div>
-        <div class="fs-3">Just the right amount of everything.</div>
-        <div class="text-secondary-emphasis fs-5">
+      <section class="iphone-11-container text-center">
+        <div class="fs-1 fw-bold pt-5">iPhone 11</div>
+        <div class="fs-4">Just the right amount of everything.</div>
+        <div class="text-secondary-emphasis fs-9">
           From $16.62/mo. or $399 with trade‑in.
         </div>
         <div class="more-and-buy-links">
@@ -141,9 +141,10 @@
       </section>
 
       <!--watch and card section-->
-      <section class=" watch-and-card d-flex text-center">
+      <div class="row">
+        <section class="watch-and-card d-flex flex-column flex-md-row text-center gy-3 gy-md-0 gx-md-1">
         <!--watch section-->
-        <div class="watch-section heigt-and-center">
+        <div class="watch-section col-md-6 mb-1 me-md-2">
           <div class="watch-logo">
             <img
               src="images/icons/watch-series5-logo.png"
@@ -165,7 +166,7 @@
         </div>
 
         <!---card section-->
-        <div class="card-section heigt-and-center">
+        <div class="card-section col-md-6">
           <div class="card-logo">
             <img src="images/icons/apple-card-logo.png" alt="apple-card-logo" />
           </div>
@@ -180,11 +181,13 @@
           </div>
         </div>
       </section>
+      </div>
 
       <!--tv and airpods section-->
-      <section class="d-flex text-center">
+      <div class="row">
+              <section class="d-flex flex-column flex-md-row text-center">
         <!--tv section-->
-        <div class="tv-section heigt-and-center">
+        <div class="tv-section col-md-6 mb-1 me-md-2">
           <div class="tv-logo">
             <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo" />
           </div>
@@ -199,9 +202,9 @@
         </div>
 
         <!---airpods section-->
-        <div class="airpods-section heigt-and-center">
-          <div class="text-white fw-bold">AirPods Pro</div>
-          <div class="text-white">Magic like you’ve never heard.</div>
+        <div class="airpods-section col-12 col-md-6">
+          <div class="text-white fs-1 fw-bold">AirPods Pro</div>
+          <div class="text-white fs-3">Magic like you’ve never heard.</div>
           <div class="more-and-buy-links">
             <ul>
               <li><a href="#">Learn more ></a></li>
@@ -210,14 +213,16 @@
           </div>
         </div>
       </section>
+      </div>
 
       <!--section for macBook and iPad-->
-      <section class="text-center d-flex">
+      <div class="row">
+              <section class="text-center d-flex flex-column flex-md-row">
         <!--macBook section-->
-        <div class="macbook-section">
-          <div class="">16-inch model</div>
-          <div class="fw-bold">MacBook Pro</div>
-          <div class="">The best for the brightest.</div>
+        <div class="macbook-section col-12 col-md-6 mb-3 mb-md-0 me-md-2">
+          <div class="fs-3">16-inch model</div>
+          <div class="fw-bold fs-1">MacBook Pro</div>
+          <div class="fs-3">The best for the brightest.</div>
           <div class="more-and-buy-links">
             <ul>
               <li><a href="#">Learn more ></a></li>
@@ -227,11 +232,11 @@
         </div>
 
         <!---iPad section-->
-        <div class="ipad-section heigt-and-center">
+        <div class="ipad-section heigt-and-center col-12 col-md-6">
           <div class="ipad-img">
           <img src="images/icons/new-ipad-logo.png" alt="new-ipad-logo" />
         </div>
-        <div class="">Like a computer. Unlike any computer.</div>
+        <div class="fs-5">Like a computer. Unlike any computer.</div>
         <div class="more-and-buy-links">
           <ul>
             <li><a href="#">Learn more ></a></li>
@@ -239,7 +244,7 @@
           </ul>
         </div>
       </section>
-        </div>
+      </div>
       </div>
     </div>
 
